@@ -17,28 +17,34 @@
 <h3>Parameters:</h3>
                                                       
 <ul>
-                                   <li>Input - Data field ROC is based on</li>
-   <li>Period - ROC period</li>
-   <li>Smoothing Period - ROC smoothing period</li>
-   <li>Smoothing Type - ROC smoothing type<br>
-   </li>
+   <li>Input - Data field that the ROC is based on</li>
+   <li>Period - ROC period - the number of days in the past to compare with</li>
+   <li>Smoothing - ROC smoothing period - number of days</li>
+   <li>Smoothing Type - ROC smoothing type</li>
    <li>Color - ROC color</li>
-      <li>Line Type - ROC line type</li>
-      <li>Label - The text to identify the ROC plot</li>
-                                                          
+   <li>Line Type - ROC line type</li>
+   <li>Label - The text to identify the ROC plot</li>
 </ul>
                                                    
 <h3>Description:</h3>
-                          <br>
-                                                   
-<h3>Alerts:&nbsp;</h3>
-                                                   
+<p>Rate of Change is a simple momentum indicator calculating the rate at
+which the price changes over a specified period of time.</p>
+<p>Uses the division method for comparing the price with that of the last
+period.</p>
+
+<h4>Some hints for interpretation</h4>
+<p>Use several momentum indicators for various time spans.</p>
+<p>Above equilibrium: greater than this time last period.
+  Below equilibrium: less than this time last period.</p>
+<p>Rising momentum: bullish, expanding. Declining momentum: bearish.</p>
+
+<h3>Alerts:</h3>
+
 <ul>
-                                          
+
 </ul>
-                            True<br>
-                  <br>
-                             <br>
-                                       
+
+<p>True</p>
+
 </body>
 </html>
