@@ -26,24 +26,17 @@
   <ol>
     <li><a href="toolbars.html">Tab Functions Toggle</a></li>
     <li><a href="toolbars.html">Chart Grid</a></li>
-    <li><a href="toolbars.html">Scale to Screen</a><br>
-    </li>
+    <li><a href="toolbars.html">Scale to Screen</a></li>
     <li><a href="newindicator.html">New Indicator</a></li>
     <li><a href="datawindow.html">Data Window</a></li>
-    <li><a href="quotes.html">Quotes</a><br>
-    </li>
+    <li><a href="quotes.html">Quotes</a></li>
     <li><a href="toolbars.html">Compression</a></li>
     <li><a href="charttype.html">Chart Type</a></li>
     <li><a href="toolbars.html">Bar Spacing</a></li>
     <li><a href="toolbars.html">Bars</a></li>
     <li><a href="toolbars.html">Chart Range</a></li>
-    <li>
-      <ol>
-      </ol>
-    </li>
   </ol>
-  <li><a href="preferences.html">Preferneces</a><br>
-  </li>
+  <li><a href="preferences.html">Preferences</a></li>
   <li><a href="installplugins.html">Install Plugins</a></li>
   <li><a href="mainchart.html">Main Chart Area</a></li>
   <li><a href="indicatorchart.html">Indicator Area</a></li>
@@ -62,8 +55,7 @@
 <h3>Quote Plugin Reference</h3>
 <ol>
   <li><a href="cbot.html">CBOT</a></li>
-  <li><a href="cc.html"><u>CC</u></a><br>
-  </li>
+  <li><a href="cc.html"><u>CC</u></a></li>
   <li><a href="cme.html">CME</a></li>
   <li><a href="cmehistory.html">CMEHistory</a></li>
   <li><a href="cot.html">COT</a></li>
@@ -71,8 +63,7 @@
   <li><a href="indexes.html">Index</a></li>
   <li><a href="nybot.html">NYBOT</a></li>
   <li><a href="qtstalker.html">Qtstalker</a></li>
-  <li><a href="ratio.html">Ratio</a><br>
-  </li>
+  <li><a href="ratio.html">Ratio</a></li>
   <li><a href="spread.html">Spread</a></li>
   <li><a href="yahoo.html">Yahoo</a></li>
   <li><a href="yahooquote.html">YahooQuote</a></li>
